--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">part2-chapter6</string>
+    <string name="default_notification_channel_id">default_notification_channel_id</string>
 </resources>
